force-app/main/default/objects/CTA__c/CTA__c.object-meta.xml
<CustomObject>
    <description>Created to capture different CTA information</description>
    <label>CTA</label>
    <nameField>
        <displayFormat>CTA-{0000}</displayFormat>
        <label>CTA No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CTAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>