force-app/main/default/objects/CTA__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF(   NOT(ISBLANK(Customer_Contact__r.MailingAddress)) , (Customer_Contact__r.MailingStreet &amp;&apos; &apos;&amp; Customer_Contact__r.MailingCity &amp;&apos; &apos;&amp; Customer_Contact__r.MailingState &amp;&apos; &apos;&amp; Customer_Contact__r.MailingCountry &amp;&apos; &apos;&amp; Customer_Contact__r.MailingPostalCode) ,(Lead__r.Street &amp;&apos; &apos;&amp; Lead__r.City &amp;&apos; &apos;&amp; Lead__r.State &amp;&apos; &apos;&amp; Lead__r.Country &amp;&apos; &apos;&amp; Lead__r.PostalCode) )</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>