force-app/main/default/objects/CTA__c/fields/Adhesive_Potential_Basis_Annual_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Adhesive_Potential_Basis_Annual_Turnover__c</fullName>
    <label>Annual Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>