force-app/main/default/objects/CTA__c/fields/Agent_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Agent_Assigned_Date__c</fullName>
    <label>Agent Assigned Date</label>
    <type>DateTime</type>
</CustomField>