force-app/main/default/objects/CTA__c/fields/Amplify_Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Amplify_Lead_Score__c</fullName>
    <formula>Lead__r.Amplify_Lead_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amplify Lead Score</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>