force-app/main/default/objects/CTA__c/fields/Annualized_value_estimation__c.field-meta.xml
<CustomField>
    <fullName>Annualized_value_estimation__c</fullName>
    <formula>IF(ISBLANK(Customer_Contact__r.Annualized_value_estimation__c)==False,Customer_Contact__r.Annualized_value_estimation__c,  Lead__r.Annualized_value_estimation__c )</formula>
    <label>Annualized value estimation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>