force-app/main/default/objects/CTA__c/fields/Appointment_Date_with_SSE__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_with_SSE__c</fullName>
    <description>Appointment Date with the senior sales engineer</description>
    <inlineHelpText>Appointment Date with the senior sales engineer</inlineHelpText>
    <label>Appointment Date with SSE</label>
    <type>Date</type>
</CustomField>