force-app/main/default/objects/CTA__c/fields/Assigned_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Agent__c</fullName>
    <label>Assigned Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>