force-app/main/default/objects/CTA__c/fields/Blue_Dart_Status__c.field-meta.xml
<CustomField>
    <fullName>Blue_Dart_Status__c</fullName>
    <label>Blue Dart Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>