force-app/main/default/objects/CTA__c/fields/CC_Remark_1__c.field-meta.xml
<CustomField>
    <fullName>CC_Remark_1__c</fullName>
    <formula>IF( Lead__r.CC_Remarks_1__c  &lt;&gt; Null,Lead__r.CC_Remarks_1__c,  Customer_Contact__r.CC_Remarks_1__c )</formula>
    <label>CC Remark 1</label>
    <type>Text</type>
</CustomField>