force-app/main/default/objects/CTA__c/fields/CC_Remark_2__c.field-meta.xml
<CustomField>
    <fullName>CC_Remark_2__c</fullName>
    <formula>IF( Lead__r.CC_Remarks_2__c  &lt;&gt; Null,Lead__r.CC_Remarks_2__c,  Customer_Contact__r.CC_Remarks_2__c )</formula>
    <label>CC Remark 2</label>
    <type>Text</type>
</CustomField>