force-app/main/default/objects/CTA__c/fields/CC_Remark_3__c.field-meta.xml
<CustomField>
    <fullName>CC_Remark_3__c</fullName>
    <formula>IF( Lead__r.CC_Remarks_3__c  &lt;&gt; Null,Lead__r.CC_Remarks_3__c,  Customer_Contact__r.CC_Remarks_3__c )</formula>
    <label>CC Remark 3</label>
    <type>Text</type>
</CustomField>