force-app/main/default/objects/CTA__c/fields/CC_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Status__c</fullName>
    <formula>TEXT( Lead__r.CC_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Status</label>
    <type>Text</type>
</CustomField>