force-app/main/default/objects/CTA__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Quotation Related</description>
    <label>Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>