force-app/main/default/objects/CTA__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>IF( Lead__r.Company  &lt;&gt; Null,Lead__r.Company, Customer_Contact__r.Account.Name)</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>