force-app/main/default/objects/CTA__c/fields/Contact_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account_ID__c</fullName>
    <formula>Customer_Contact__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Account ID</label>
    <type>Text</type>
</CustomField>