force-app/main/default/objects/CTA__c/fields/Contact_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_No__c</fullName>
    <label>Contact No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>