force-app/main/default/objects/CTA__c/fields/Contact_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Id__c</fullName>
    <formula>Customer_Contact__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner Id</label>
    <type>Text</type>
</CustomField>