force-app/main/default/objects/CTA__c/fields/Contact_Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Contact_Sr_No__c</fullName>
    <formula>Customer_Contact__r.Contact_Sr_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Sr. No.</label>
    <type>Text</type>
</CustomField>