force-app/main/default/objects/CTA__c/fields/Contact_Us_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Timestamp__c</fullName>
    <label>Contact Us Timestamp</label>
    <type>DateTime</type>
</CustomField>