force-app/main/default/objects/CTA__c/fields/COUNTRY_FLAG__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY_FLAG__c</fullName>
    <description>Indiamart Related</description>
    <label>COUNTRY FLAG</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>