force-app/main/default/objects/CTA__c/fields/Coupon_Code__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code__c</fullName>
    <description>Quotation Related</description>
    <label>Coupon Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>