force-app/main/default/objects/CTA__c/fields/Courier_Company__c.field-meta.xml
<CustomField>
    <fullName>Courier_Company__c</fullName>
    <formula>IF( CONTAINS( Waybill_No__c , &apos;IN&apos;) ,&apos;India Post&apos;, IF(NOT( ISBLANK(Waybill_No__c)), &apos;BLUE DART&apos;, &apos;&apos;) )</formula>
    <label>Courier Company</label>
    <type>Text</type>
</CustomField>