force-app/main/default/objects/CTA__c/fields/CTA_Assigned_to_IST_Date__c.field-meta.xml
<CustomField>
    <fullName>CTA_Assigned_to_IST_Date__c</fullName>
    <description>CTA status changed to Assigned to IST Date/Time</description>
    <label>CTA Assigned to IST Date</label>
    <type>DateTime</type>
</CustomField>