force-app/main/default/objects/CTA__c/fields/CTA_CC_Remarks_3__c.field-meta.xml
<CustomField>
    <fullName>CTA_CC_Remarks_3__c</fullName>
    <label>CTA CC Remarks 3</label>
    <type>TextArea</type>
</CustomField>