force-app/main/default/objects/CTA__c/fields/CTA_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>CTA_Created_Date__c</fullName>
    <description>Date on which the cta come</description>
    <label>CTA Created Date</label>
    <type>Date</type>
</CustomField>