force-app/main/default/objects/CTA__c/fields/CTA_stage__c.field-meta.xml
<CustomField>
    <fullName>CTA_stage__c</fullName>
    <label>CTA Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Data Collection Process</fullName>
            </value>
            <value>
                <fullName>Data and Intent Validation Process</fullName>
            </value>
            <value>
                <fullName>Pre-sales nurturing</fullName>
            </value>
            <value>
                <fullName>Disqualified by call center team</fullName>
            </value>
            <value>
                <fullName>Assigned to IST</fullName>
            </value>
            <value>
                <fullName>Need Follow up</fullName>
            </value>
            <value>
                <fullName>Nurturing</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Closed abandoned cart</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>