force-app/main/default/objects/CTA__c/fields/CTA_status_Data_collection_Date__c.field-meta.xml
<CustomField>
    <fullName>CTA_status_Data_collection_Date__c</fullName>
    <label>CTA status Data collection Date</label>
    <type>DateTime</type>
</CustomField>