force-app/main/default/objects/CTA__c/fields/Customer_AEI_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_AEI_Type__c</fullName>
    <formula>Customer_Contact__r.Account.Customer_AEI_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer AEI Type</label>
    <type>Text</type>
</CustomField>