force-app/main/default/objects/CTA__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <formula>IF( Customer_Contact__c!=null, Customer_Contact__r.Email, Lead__r.Email )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Email</label>
    <type>Text</type>
</CustomField>