force-app/main/default/objects/CTA__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <formula>IF( ISBLANK(Customer_Contact__r.Phone_Number__c)==False  , Customer_Contact__r.Phone_Number__c , IF( ISBLANK(Lead__r.Phone)==False,Lead__r.Phone , IF( ISBLANK(Lead__r.MobilePhone)== False ,Lead__r.MobilePhone, Null ) ))</formula>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>