force-app/main/default/objects/CTA__c/fields/Customized_Price_Expect_price_per_piece__c.field-meta.xml
<CustomField>
    <fullName>Customized_Price_Expect_price_per_piece__c</fullName>
    <label>Customized Price-Expect price per piece</label>
    <length>100</length>
    <type>Text</type>
</CustomField>