force-app/main/default/objects/CTA__c/fields/Customized_Price_Product_Details__c.field-meta.xml
<CustomField>
    <fullName>Customized_Price_Product_Details__c</fullName>
    <label>Customized Price Product Details</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>