force-app/main/default/objects/CTA__c/fields/Customized_Price_Product_Link__c.field-meta.xml
<CustomField>
    <fullName>Customized_Price_Product_Link__c</fullName>
    <label>Customized Price Product Link</label>
    <type>Url</type>
</CustomField>