force-app/main/default/objects/CTA__c/fields/Customized_Price_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Customized_Price_Quantity__c</fullName>
    <label>Customized Price Quantity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>