force-app/main/default/objects/CTA__c/fields/Customized_Price_SKU__c.field-meta.xml
<CustomField>
    <fullName>Customized_Price_SKU__c</fullName>
    <label>Customized Price-SKU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>