force-app/main/default/objects/CTA__c/fields/Data_and_intent_validation_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_and_intent_validation_Date__c</fullName>
    <label>Data and intent validation Date</label>
    <type>DateTime</type>
</CustomField>