force-app/main/default/objects/CTA__c/fields/Data_validation__c.field-meta.xml
<CustomField>
    <fullName>Data_validation__c</fullName>
    <formula>Lead__r.Data_validation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data validated</label>
    <type>Checkbox</type>
</CustomField>