force-app/main/default/objects/CTA__c/fields/Date_From_Final_CTA_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Date_From_Final_CTA_Created_Date__c</fullName>
    <formula>MID(  Final_CTA_Created_Date__c  , 0, 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date From Final CTA Created Date</label>
    <type>Text</type>
</CustomField>