force-app/main/default/objects/CTA__c/fields/Date_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Delivery__c</fullName>
    <label>Date of Delivery</label>
    <length>20</length>
    <type>Text</type>
</CustomField>