force-app/main/default/objects/CTA__c/fields/Date_Of_Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Enquiry__c</fullName>
    <description>Indiamart Related</description>
    <label>Date Of Enquiry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>