force-app/main/default/objects/CTA__c/fields/Dealing_in_these_brands__c.field-meta.xml
<CustomField>
    <fullName>Dealing_in_these_brands__c</fullName>
    <description>Research inputs – traders</description>
    <inlineHelpText>Research inputs – traders</inlineHelpText>
    <label>Dealing in these brands</label>
    <length>255</length>
    <type>Text</type>
</CustomField>