force-app/main/default/objects/CTA__c/fields/Decision_making_ability_in_org__c.field-meta.xml
<CustomField>
    <fullName>Decision_making_ability_in_org__c</fullName>
    <description>Research inputs – End customer</description>
    <inlineHelpText>Research inputs – End customer</inlineHelpText>
    <label>Decision making ability in org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>