force-app/main/default/objects/CTA__c/fields/decision_making_authority_in_the_organiz__c.field-meta.xml
<CustomField>
    <fullName>decision_making_authority_in_the_organiz__c</fullName>
    <label>decision making authority in the organiz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>