force-app/main/default/objects/CTA__c/fields/Demo_Comments__c.field-meta.xml
<CustomField>
    <fullName>Demo_Comments__c</fullName>
    <label>Demo Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>