force-app/main/default/objects/CTA__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>IF( Lead__r.Department__c  &lt;&gt; Null, Lead__r.Department__c,  Customer_Contact__r.Department__c )</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>