force-app/main/default/objects/CTA__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <formula>IF( Lead__r.Designation__c &lt;&gt; Null,  Lead__r.Designation__c,  Customer_Contact__r.Designation__c )</formula>
    <label>Designation</label>
    <type>Text</type>
</CustomField>