force-app/main/default/objects/CTA__c/fields/DIR_QUERY_MODREF_TYPE__c.field-meta.xml
<CustomField>
    <fullName>DIR_QUERY_MODREF_TYPE__c</fullName>
    <description>Indiamart Related</description>
    <label>DIR_QUERY_MODREF_TYPE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>