force-app/main/default/objects/CTA__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Distributor User Lookup field on CTA</description>
    <label>Distributor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Distributor</relationshipName>
    <type>Lookup</type>
</CustomField>