force-app/main/default/objects/CTA__c/fields/Distributor_Address__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Address__c</fullName>
    <formula>Distributor__r.Street + Distributor__r.City  +  Distributor__r.State  +  Distributor__r.PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Address</label>
    <type>Text</type>
</CustomField>