force-app/main/default/objects/CTA__c/fields/Distributor_Company__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Company__c</fullName>
    <formula>Distributor__r.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Company</label>
    <type>Text</type>
</CustomField>