force-app/main/default/objects/CTA__c/fields/Distributor_Email__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Email__c</fullName>
    <formula>Distributor__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Email</label>
    <type>Text</type>
</CustomField>