force-app/main/default/objects/CTA__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <formula>Distributor__r.FirstName + Distributor__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Name</label>
    <type>Text</type>
</CustomField>