force-app/main/default/objects/CTA__c/fields/Distributor_On_Project__c.field-meta.xml
<CustomField>
    <fullName>Distributor_On_Project__c</fullName>
    <label>Distributor On Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AAD Marketing Engineers Private Ltd(Distributor)</fullName>
            </value>
            <value>
                <fullName>Abhijeet Auto Components Pvt. ltd</fullName>
            </value>
            <value>
                <fullName>AKB Industries</fullName>
            </value>
            <value>
                <fullName>APM Technosales</fullName>
            </value>
            <value>
                <fullName>Aqua Engineering Cochin</fullName>
            </value>
            <value>
                <fullName>Aqua Engineering Services - Bangalore(Distributor)</fullName>
            </value>
            <value>
                <fullName>Arihant Enterprises Indore</fullName>
            </value>
            <value>
                <fullName>AS Multisales</fullName>
            </value>
            <value>
                <fullName>Automotive Solution</fullName>
            </value>
            <value>
                <fullName>Automotive Solutions Indore</fullName>
            </value>
            <value>
                <fullName>Bala Agencies</fullName>
            </value>
            <value>
                <fullName>Bhandari Techno Trade</fullName>
            </value>
            <value>
                <fullName>Bison Industrial Hub</fullName>
            </value>
            <value>
                <fullName>Blackstone Diesel Jodhpur</fullName>
            </value>
            <value>
                <fullName>CAP Enterprise</fullName>
            </value>
            <value>
                <fullName>Chitrakut Auto Colours</fullName>
            </value>
            <value>
                <fullName>CM Corporation</fullName>
            </value>
            <value>
                <fullName>Compac Technologies India Ltd-LUD(Distributor)</fullName>
            </value>
            <value>
                <fullName>Darbarilal &amp; Sons</fullName>
            </value>
            <value>
                <fullName>Dawn Enterprises</fullName>
            </value>
            <value>
                <fullName>Deepak Automobiles</fullName>
            </value>
            <value>
                <fullName>Devi Enterprises</fullName>
            </value>
            <value>
                <fullName>Dynamic Engineers</fullName>
            </value>
            <value>
                <fullName>Elegant Enterprises</fullName>
            </value>
            <value>
                <fullName>Etech Appliances Ankleshwar</fullName>
            </value>
            <value>
                <fullName>Ethertech Solutions</fullName>
            </value>
            <value>
                <fullName>FRV Associates</fullName>
            </value>
            <value>
                <fullName>G A Engineers</fullName>
            </value>
            <value>
                <fullName>Gurukripa</fullName>
            </value>
            <value>
                <fullName>Henkel India(Distributor)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>