force-app/main/default/objects/CTA__c/fields/Distributor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Phone__c</fullName>
    <formula>Distributor__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Phone</label>
    <type>Text</type>
</CustomField>