force-app/main/default/objects/CTA__c/fields/Don_t_send_sample__c.field-meta.xml
<CustomField>
    <fullName>Don_t_send_sample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don’t send sample</label>
    <type>Checkbox</type>
</CustomField>