force-app/main/default/objects/CTA__c/fields/DSE_responsible__c.field-meta.xml
<CustomField>
    <fullName>DSE_responsible__c</fullName>
    <label>DSE responsible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aditya  (Darbari Lal)</fullName>
            </value>
            <value>
                <fullName>Ajay Suthar (Innovative Engg)</fullName>
            </value>
            <value>
                <fullName>Amrit Singh (Compac,Mohali)</fullName>
            </value>
            <value>
                <fullName>Anadi (RELSOL)</fullName>
            </value>
            <value>
                <fullName>Anand Lakhani  (Innovative Engineering - Rajkot )</fullName>
            </value>
            <value>
                <fullName>Ankit Vyas (Shil Technologies-Baroda)</fullName>
            </value>
            <value>
                <fullName>Arindam Dutta (C M Corporation)</fullName>
            </value>
            <value>
                <fullName>Bastin Thomas (Aqua Engineering Services - Cochin)</fullName>
            </value>
            <value>
                <fullName>David Yesaya (M P Brothers)</fullName>
            </value>
            <value>
                <fullName>Deepak (Namic Industrial Solutions)</fullName>
            </value>
            <value>
                <fullName>Diwakar Yadav (Nikhil Shah &amp; Associates)</fullName>
            </value>
            <value>
                <fullName>Gautam Vora  (Shaildeep Enterprise)</fullName>
            </value>
            <value>
                <fullName>Gopal Patel (Multiweld Engineering )</fullName>
            </value>
            <value>
                <fullName>Gourav Kale (Vison Industrial Hub)</fullName>
            </value>
            <value>
                <fullName>Govind (Selwel Marketing)</fullName>
            </value>
            <value>
                <fullName>Haridas Patil (Trade Syndicate)</fullName>
            </value>
            <value>
                <fullName>Himanshu (Himanshu Enterprise)</fullName>
            </value>
            <value>
                <fullName>Janmajay Kumar (Suman Enterprises)</fullName>
            </value>
            <value>
                <fullName>Jaydeep Goswami  (Innovative Engineering - Rajkot )</fullName>
            </value>
            <value>
                <fullName>Jayesh Mandaliya (Innovative Engineering products pvt ltd)</fullName>
            </value>
            <value>
                <fullName>Jayesh Mandaliya (Innovative Engineering - Rajkot )</fullName>
            </value>
            <value>
                <fullName>Junaid (A S Multi )</fullName>
            </value>
            <value>
                <fullName>Kamal Panchal  (Sartech Solutions Pvt Ltd)</fullName>
            </value>
            <value>
                <fullName>Kamlesh (Compac,Ludhiana)</fullName>
            </value>
            <value>
                <fullName>Kamlesh Srivastava (Compac Technologies)</fullName>
            </value>
            <value>
                <fullName>Krishna Nagle (Bhandari Technotrade)</fullName>
            </value>
            <value>
                <fullName>Kunal Desai (TESCO )</fullName>
            </value>
            <value>
                <fullName>Logeswaran (Saroj Enterprises)</fullName>
            </value>
            <value>
                <fullName>Manish Kumar (QSRS)</fullName>
            </value>
            <value>
                <fullName>Manish Madan (Sneh sales ( Bahadurgarh Haryana )</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>