force-app/main/default/objects/CTA__c/fields/Ecom_Source__c.field-meta.xml
<CustomField>
    <fullName>Ecom_Source__c</fullName>
    <formula>Lead__r.Ecom_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTM Source</label>
    <type>Text</type>
</CustomField>