force-app/main/default/objects/CTA__c/fields/Ecoomerce_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Ecoomerce_Qualification__c</fullName>
    <label>Ecommerce Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One time eCommerce</fullName>
            </value>
            <value>
                <fullName>More value for the same products</fullName>
            </value>
            <value>
                <fullName>Additional opportunity</fullName>
            </value>
            <value>
                <fullName>More value for the same products + Additional opportunity</fullName>
            </value>
            <value>
                <fullName>Need follow-up</fullName>
            </value>
            <value>
                <fullName>Speak to IST</fullName>
            </value>
            <value>
                <fullName>Does not want to speak to IST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>