force-app/main/default/objects/CTA__c/fields/EMAIL_ALT__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_ALT__c</fullName>
    <description>Indiamart Related</description>
    <label>EMAIL_ALT</label>
    <type>Email</type>
</CustomField>