force-app/main/default/objects/CTA__c/fields/ENQ_CALL_DURATION__c.field-meta.xml
<CustomField>
    <fullName>ENQ_CALL_DURATION__c</fullName>
    <description>Indiamart Related</description>
    <label>ENQ_CALL_DURATION</label>
    <length>30</length>
    <type>Text</type>
</CustomField>