force-app/main/default/objects/CTA__c/fields/ENQ_MESSAGE__c.field-meta.xml
<CustomField>
    <fullName>ENQ_MESSAGE__c</fullName>
    <description>Indiamart Related</description>
    <label>ENQ_MESSAGE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>