force-app/main/default/objects/CTA__c/fields/Enquiry_comments__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_comments__c</fullName>
    <label>Enquiry comments</label>
    <type>TextArea</type>
</CustomField>