force-app/main/default/objects/CTA__c/fields/Enquiry_Message__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Message__c</fullName>
    <description>For All Types of Enquiry</description>
    <label>Enquiry Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>