force-app/main/default/objects/CTA__c/fields/Enquiry_status__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_status__c</fullName>
    <label>Enquiry status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>qualified</fullName>
            </value>
            <value>
                <fullName>Callback2</fullName>
            </value>
            <value>
                <fullName>Callback1</fullName>
            </value>
            <value>
                <fullName>No requirement</fullName>
            </value>
            <value>
                <fullName>Noco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>