force-app/main/default/objects/CTA__c/fields/Estimated_annualized_potential__c.field-meta.xml
<CustomField>
    <fullName>Estimated_annualized_potential__c</fullName>
    <label>Estimated annualized potential</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>