force-app/main/default/objects/CTA__c/fields/Expected_close_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_close_date__c</fullName>
    <label>Expected close date</label>
    <type>Date</type>
</CustomField>