force-app/main/default/objects/CTA__c/fields/Final_CTA_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_CTA_Created_Date__c</fullName>
    <formula>IF(  ISBLANK(CTA_Created_Date__c)=False  , Text(CTA_Created_Date__c),   TEXT(CreatedDate  + (5.5/24) ))</formula>
    <label>Final CTA Created Date</label>
    <type>Text</type>
</CustomField>