force-app/main/default/objects/CTA__c/fields/First_click_source__c.field-meta.xml
<CustomField>
    <fullName>First_click_source__c</fullName>
    <formula>IF( ISBLANK( Customer_Contact__r.gaconnector_First_Click_Source__c )==False , Customer_Contact__r.gaconnector_First_Click_Source__c, Lead__r.gaconnector_First_Click_Source__c)</formula>
    <label>First click source</label>
    <type>Text</type>
</CustomField>