force-app/main/default/objects/CTA__c/fields/Flag_AEI_Customer__c.field-meta.xml
<CustomField>
    <fullName>Flag_AEI_Customer__c</fullName>
    <formula>Customer_Contact__r.Account.Flag_AEI_Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag-AEI Customer</label>
    <type>Checkbox</type>
</CustomField>