force-app/main/default/objects/CTA__c/fields/Flag_Contact_Us__c.field-meta.xml
<CustomField>
    <fullName>Flag_Contact_Us__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Contact Us</label>
    <type>Checkbox</type>
</CustomField>