force-app/main/default/objects/CTA__c/fields/Flag_Get_Customized_Price__c.field-meta.xml
<CustomField>
    <fullName>Flag_Get_Customized_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag-Get Customized Price</label>
    <type>Checkbox</type>
</CustomField>