force-app/main/default/objects/CTA__c/fields/Flag_Request_Callback__c.field-meta.xml
<CustomField>
    <fullName>Flag_Request_Callback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag-Request Callback</label>
    <type>Checkbox</type>
</CustomField>