force-app/main/default/objects/CTA__c/fields/Flag_Sample_Requested__c.field-meta.xml
<CustomField>
    <fullName>Flag_Sample_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag - Sample Requested</label>
    <type>Checkbox</type>
</CustomField>