force-app/main/default/objects/CTA__c/fields/Flag_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Flag_Webinar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Webinar</label>
    <type>Checkbox</type>
</CustomField>