force-app/main/default/objects/CTA__c/fields/Focus_Segment__c.field-meta.xml
<CustomField>
    <fullName>Focus_Segment__c</fullName>
    <label>Focus Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>